# GPRat

./: .gitignore  CMakeLists.txt  CMakePresets.json  boilerplate-benchmark.sh  compile_gprat.sh
bindings/: CMakeLists.txt
core/: CMakeLists.txt
core/include/: gprat_c.hpp  target.hpp
core/include/gpu/sycl/: adapter_onemath.hpp  sycl_gp_optimizer.hpp  sycl_kernels.hpp  sycl_tiled_algorithms.hpp  sycl_utils.hpp
core/include/sycl/: adapter_onemath.hpp  sycl_gp_algorithms.hpp  sycl_gp_functions.hpp  sycl_gp_optimizer.hpp  sycl_gp_uncertainty.hpp  sycl_kernels.hpp  sycl_tiled_algorithms.hpp  sycl_utils.hpp
core/src/: gprat_c.cpp  target.cpp
core/src/cpu/: adapter_cblas_fp32.cpp
core/src/gpu/cuda/: gp_algorithms.cu  gp_functions.cu
core/src/gpu/sycl/: adapter_onemath.cpp  sycl_gp_algorithms.cpp  sycl_gp_functions.cpp  sycl_gp_optimizer.cpp  sycl_gp_uncertainty.cpp  sycl_kernels.cpp  sycl_tiled_algorithms.cpp
core/src/sycl/: adapter_onemath.cpp  sycl_gp_algorithms.cpp  sycl_gp_functions.cpp  sycl_gp_optimizer.cpp  sycl_gp_uncertainty.cpp  sycl_kernels.cpp  sycl_tiled_algorithms.cpp  sycl_tiled_algorithms_lambda.cpp  sycl_tiled_algorithms_old.cpp  sycl_tiled_algorithms_workwithme.cpp
data/data_1024/: output.json
examples/gprat_cpp/: CMakeLists.txt  run_gprat_cpp.sh
examples/gprat_cpp/src/: execute.cpp
examples/gprat_python/: execute.py  run_gprat_python.sh
test/: CMakeLists.txt
test/src/: output_correctness.cpp
